upgrade to quarkus 3.31